fix nav link alignment

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ body {
 }
 
 .nav {
+  width: 100%;
   height: 70px;
 }
 
